creazione righe header e navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <header>
+        <section class="header-top">
+            <div id="logo">logo</div>
+            <nav>
+                <ul class="navbar">
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+            </nav>
+            <div class="login">login</div>
+    </header>
 
 </body>
 
