rework completo e riorganizzazione navbar

--- a/index.html
+++ b/index.html
@@ -11,18 +11,38 @@
 
 <body>
     <header>
+
+        <!-- Header top -->
         <section class="header-top">
-            <div id="logo">logo</div>
-            <nav>
-                <ul class="navbar">
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
+            <nav id="main-nav">
+                <div id="logo">
+                    logo
+                </div>
+                <ul>
+                    <li>
+                        <a href="#">link</a>
+                    </li>
+                    <li>
+                        <a href="#">link</a>
+                    </li>
+                    <li>
+                        <a href="#">link</a>
+                    </li>
+                    <li>
+                        <a href="#">link</a>
+                    </li>
+                    <li>
+                        <a href="#">link</a>
+                    </li>
                 </ul>
+                <div id="login">
+                    login
+                </div>
             </nav>
-            <div class="login">login</div>
+        </section>
+
+        <!-- Header bottom -->
+        <section class="header-bottom"></section>
     </header>
 
 </body>
