aggiunta jumbotron e fix top-header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="logo">
                     logo
                 </div>
-                <ul>
+                <ul id="nav-menu">
                     <li>
                         <a href="#">link</a>
                     </li>
@@ -42,7 +42,11 @@
         </section>
 
         <!-- Header bottom -->
-        <section class="header-bottom"></section>
+        <section class="header-bottom">
+            <div id="jumbotron">
+                sdfgasgas
+            </div>
+        </section>
     </header>
 
 </body>
