ulteriori fix e riordino sezione header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div id="logo">
                     logo
                 </div>
-                <ul id="nav-menu">
+                <ul>
                     <li>
                         <a href="#">link</a>
                     </li>
@@ -43,9 +43,7 @@
 
         <!-- Header bottom -->
         <section class="header-bottom">
-            <div id="jumbotron">
-                sdfgasgas
-            </div>
+            <div id="jumbotron"></div>
         </section>
     </header>
 
