aggiunte sezioni main e inizio disposizione layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+    <!-- Header -->
     <header>
 
         <!-- Header top -->
@@ -46,6 +48,23 @@
             <div id="jumbotron"></div>
         </section>
     </header>
+
+    <!-- Container main -->
+    <div class="container-main">
+
+        <!-- Main -->
+        <main>
+            <div class="container-row">
+                <div class="text-box"></div>
+                <div class="img-box"></div>
+            </div>
+            <div class="container-row">
+                <div class="img-box"></div>
+                <div class="text-box"></div>
+            </div>
+        </main>
+        <footer></footer>
+    </div>
 
 </body>
 
