aggiunta ultima sezione main

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 <div class="img-box"></div>
                 <div class="text-box"></div>
             </div>
+            <div class="container-row">
+                <div class="text-box"></div>
+                <div class="img-box"></div>
+            </div>
         </main>
         <footer></footer>
     </div>
