--- a/index.html
+++ b/index.html
@@ -54,21 +54,31 @@
 
         <!-- Main -->
         <main>
+
             <div class="container-row">
                 <div class="text-box"></div>
                 <div class="img-box"></div>
             </div>
+
+
             <div class="container-row">
                 <div class="img-box"></div>
                 <div class="text-box"></div>
             </div>
+
+
             <div class="container-row">
                 <div class="text-box"></div>
                 <div class="img-box"></div>
             </div>
+
+            <div class="mobile-apps"></div>
         </main>
-        <footer></footer>
     </div>
+    <footer>
+        <section class="footer-top"></section>
+        <section class="footer-bottom"></section>
+    </footer>
 
 </body>
 
