creazione footer top e aggiunta colonne

--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
         </main>
     </div>
     <footer>
-        <section class="footer-top"></section>
+        <section class="footer-top">
+            <div class="contacts"></div>
+            <div class="contacts cnt-blue">
+                <div class="useful-links"></div>
+                <div class="useful-links"></div>
+                <div class="useful-links"></div>
+                <div class="useful-links"></div>
+            </div>
+        </section>
         <section class="footer-bottom"></section>
     </footer>
 
