creazione footer bottom e aggiunta bottone

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
         <!-- Header bottom -->
         <section class="header-bottom">
-            <div id="jumbotron"></div>
+            <div id="jumbotron">
+
+            </div>
         </section>
     </header>
 
@@ -56,36 +58,75 @@
         <main>
 
             <div class="container-row">
-                <div class="text-box"></div>
-                <div class="img-box"></div>
+                <div class="text-box">
+
+                </div>
+                <div class="img-box">
+
+                </div>
             </div>
 
 
             <div class="container-row">
-                <div class="img-box"></div>
-                <div class="text-box"></div>
+                <div class="img-box">
+
+                </div>
+                <div class="text-box">
+
+                </div>
             </div>
 
 
             <div class="container-row">
-                <div class="text-box"></div>
-                <div class="img-box"></div>
+                <div class="text-box">
+
+                </div>
+                <div class="img-box">
+
+                </div>
             </div>
 
-            <div class="mobile-apps"></div>
+            <div class="mobile-apps">
+
+            </div>
         </main>
     </div>
+
+    <!-- Footer -->
     <footer>
+
+        <!-- Footer top -->
         <section class="footer-top">
-            <div class="contacts"></div>
-            <div class="contacts cnt-blue">
-                <div class="useful-links"></div>
-                <div class="useful-links"></div>
-                <div class="useful-links"></div>
-                <div class="useful-links"></div>
+            <div class="footer-row-container">
+                <div class="contacts">
+
+                </div>
+                <div class="contacts cnt-blue">
+                    <div class="useful-links">
+
+                    </div>
+                    <div class="useful-links">
+
+                    </div>
+                    <div class="useful-links">
+
+                    </div>
+                    <div class="useful-links">
+
+                    </div>
+                </div>
             </div>
         </section>
-        <section class="footer-bottom"></section>
+
+        <!-- Footer bottom -->
+        <section class="footer-bottom">
+            <div class="footer-row-container">
+                <div class="policy">
+                    <img src="" alt="logo discord">
+                    <button>Bottone</button>
+                </div>
+            </div>
+        </section>
     </footer>
 
 </body>
