fix link nell'header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="header-top">
             <nav id="main-nav">
                 <div id="logo">
-                    logo
+                    <a href="#">logo</a>
                 </div>
                 <ul>
                     <li>
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
                 <div id="login">
-                    login
+                    <a href="#">login</a>
                 </div>
             </nav>
         </section>
@@ -59,7 +59,12 @@
 
             <div class="container-row">
                 <div class="text-box">
-
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates unde recusandae ratione alias
+                    aspernatur rerum dolores. Recusandae beatae cumque eveniet minima veniam neque inventore, sequi
+                    suscipit error mollitia soluta cupiditate!
+                    Fuga alias officia iusto ipsam minus odio, necessitatibus pariatur cum error. Earum adipisci eos
+                    sit. Fuga natus, officia possimus delectus aliquid fugiat. Optio quos dolore sed, quia ipsum quidem
+                    voluptatem!
                 </div>
                 <div class="img-box">
 
