aggiunta regole di debug in css e test su link del login

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
                 <div id="login">
-                    <a href="#">login</a>
+                    <a class="login-link" href="#">LOGIN</a>
                 </div>
             </nav>
         </section>
