--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
                 <div id="login">
-                    <a class="login-link" href="#">LOGIN</a>
+                    <a href="#">LOGIN</a>
                 </div>
             </nav>
         </section>
@@ -59,12 +59,7 @@
 
             <div class="container-row">
                 <div class="text-box">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates unde recusandae ratione alias
-                    aspernatur rerum dolores. Recusandae beatae cumque eveniet minima veniam neque inventore, sequi
-                    suscipit error mollitia soluta cupiditate!
-                    Fuga alias officia iusto ipsam minus odio, necessitatibus pariatur cum error. Earum adipisci eos
-                    sit. Fuga natus, officia possimus delectus aliquid fugiat. Optio quos dolore sed, quia ipsum quidem
-                    voluptatem!
+
                 </div>
                 <div class="img-box">
 
