fix generali classi e riordino codice

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         </section>
     </header>
 
-    <!-- Container main -->
-    <div class="container-main">
 
-        <!-- Main -->
-        <main>
 
-            <div class="container-row">
+    <!-- Main -->
+    <main>
+
+        <div class="container-row">
+            <div class="container-element">
                 <div class="text-box">
 
                 </div>
@@ -65,9 +65,11 @@
 
                 </div>
             </div>
+        </div>
 
 
-            <div class="container-row">
+        <div class="container-row cr-grey">
+            <div class="container-element">
                 <div class="img-box">
 
                 </div>
@@ -75,9 +77,11 @@
 
                 </div>
             </div>
+        </div>
 
 
-            <div class="container-row">
+        <div class="container-row">
+            <div class="container-element">
                 <div class="text-box">
 
                 </div>
@@ -85,12 +89,15 @@
 
                 </div>
             </div>
+        </div>
 
+        <div class="container-row cr-grey">
             <div class="mobile-apps">
 
             </div>
-        </main>
-    </div>
+        </div>
+    </main>
+
 
     <!-- Footer -->
     <footer>
@@ -120,7 +127,7 @@
 
         <!-- Footer bottom -->
         <section class="footer-bottom">
-            <div class="footer-row-container">
+            <div class="footer-row-container ft-rw-cnt-bottom">
                 <div class="policy">
                     <img src="" alt="logo discord">
                     <button>Bottone</button>
