refactoring e aggiunta commenti

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Main -->
     <main>
 
-        <div class="container-row">
+        <section class="container-row">
             <div class="container-element">
                 <div class="text-box">
 
@@ -65,10 +65,9 @@
 
                 </div>
             </div>
-        </div>
+        </section>
 
-
-        <div class="container-row cr-grey">
+        <section class="container-row cr-grey">
             <div class="container-element">
                 <div class="img-box">
 
@@ -77,10 +76,9 @@
 
                 </div>
             </div>
-        </div>
+        </section>
 
-
-        <div class="container-row">
+        <section class="container-row">
             <div class="container-element">
                 <div class="text-box">
 
@@ -89,15 +87,14 @@
 
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="container-row cr-grey">
+        <section class="container-row cr-grey">
             <div class="mobile-apps">
 
             </div>
-        </div>
+        </section>
     </main>
-
 
     <!-- Footer -->
     <footer>
@@ -105,10 +102,10 @@
         <!-- Footer top -->
         <section class="footer-top">
             <div class="footer-row-container">
-                <div class="contacts">
+                <div class="social">
 
                 </div>
-                <div class="contacts cnt-blue">
+                <div class="contacts cnt-all">
                     <div class="useful-links">
 
                     </div>
