--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
         </section>
     </header>
 
-
-
     <!-- Main -->
     <main>
 
@@ -126,7 +124,9 @@
         <section class="footer-bottom">
             <div class="footer-row-container ft-rw-cnt-bottom">
                 <div class="policy">
-                    <img src="" alt="logo discord">
+                    <div class="logo-bottom">
+                        <img src="" alt="logo discord">
+                    </div>
                     <button>Bottone</button>
                 </div>
             </div>
